<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LNTelFace</string>
    <string name="user_name">手机号</string>
    <string name="hint_user_name">请输入手机号码</string>
    <string name="user_password">密码</string>
    <string name="hint_user_password">请输入密码</string>
    <string name="user_forget_password">忘记密码?</string>
    <string name="user_login">登录</string>
    <string name="user_nickname">昵称</string>
    <string name="hint_user_nickname">请输入昵称</string>
    <string name="user_password_ok">确认密码</string>
    <string name="hint_user_password_ok">请再次输入密码</string>
    <string name="user_registe">注册</string>
    <string name="next_phone">下一步，验证手机号</string>
    <string name="next_register">下一步</string>
    <string name="verify_phone">验证消息将发送至%s</string>
    <string name="verify_code">验证码</string>
    <string name="send_verify_code">获取验证码</string>
    <string name="input_verify_code">输入短信验证码</string>
    <string name="next_password">下一步，设置新密码</string>
    <string name="finish">完成</string>
    <string name="contact">联系人</string>
    <string name="contact_detail">联系人详情</string>
    <string name="contact_person">通讯录</string>
    <string name="contact_number">拨号盘</string>
    <string name="contact_my">我</string>
    <string name="search">搜索</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_c">C</string>
    <string name="number_d">D</string>
    <string name="settings">设置</string>
    <string name="logout">更换账号</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="add_contact">添加联系人</string>
    <string name="add_mobile_contact">添加手机联系人</string>
    <string name="name_">姓名:</string>
    <string name="phone_">电话:</string>
    <string name="please_enter_name">请输入姓名</string>
    <string name="please_enter_phone_number">请输入手机号码</string>
    <string name="audio_phone">语音通话</string>
    <string name="video_phone">视频通话</string>
    <string name="phone_cut">挂断</string>
    <string name="phone_mianti">免提</string>
    <string name="modify_info">修改信息</string>
    <string name="sip_account">SIP账户</string>
    <string name="account">账户</string>
    <string name="select">选项</string>
    <string name="audio">音频</string>
    <string name="video">视频</string>
    <string name="network">网络</string>
    <string name="more">高级</string>
    <string name="help">帮助</string>
    <string name="version">版本</string>
    <string name="login">登录</string>
    <string name="registe">注册</string>
    <string name="forget">找回密码</string>
    <string name="opus">OPUS</string>
    <string name="h264">H264</string>
    <string name="turn">切换</string>
    <string name="network_prompt3">启用数据流量或Wi-Fi来访问\n数据</string>
    <string name="download_failure">下载新版本失败 !</string>
    <string name="is_latest_version_label">当前为最新版本</string>
    <string name="latest_version_title">最新版本(%1$s)</string>
    <string name="update_latest_version_title">最新版本(%1$s), 更新中&#8230;</string>
    <string name="later_on_wifi">当连接上WIFI后自动更新</string>
    <string name="later_update_tip">更新中&#8230;</string>
    <string name="update">更新</string>
    <string name="ignore">忽略</string>
    <string name="delete">删除</string>
    <string name="newversion">新版本检测</string>
    <string name="callstats">统计</string>

</resources>