<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_top_middle_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/c333"
        android:textSize="20sp" />

    <View style="@style/view_line_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/user_name"
            android:textColor="@color/cblue"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_user_name"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/c333"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView style="@style/view_line_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/user_password"
            android:textColor="@color/cblue"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_user_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="1"
            android:textColor="@color/c333"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView style="@style/view_line_info" />

    <TextView
        android:id="@+id/txt_forget_password"
        style="@style/ww"
        android:layout_gravity="right"
        android:gravity="right"
        android:padding="20dp"
        android:text="@string/user_forget_password"
        android:textColor="@color/cblue"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_bule_selector"
        android:padding="0dp"
        android:text="@string/user_login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_registe"
        style="@style/ww"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:padding="20dp"
        android:text="@string/registe"
        android:textColor="@color/cblue"
        android:textSize="14sp" />

</LinearLayout>