<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/img_return"
            style="@style/ww"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_name"
            android:paddingLeft="10dp"
            android:paddingRight="50dp"
            android:paddingTop="2.5dp"
            android:paddingBottom="2.5dp"
            android:src="@drawable/icon_top_back" />

        <TextView
            android:id="@+id/tv_top_middle_title"
            style="@style/ww"
            android:layout_alignBottom="@+id/img_return"
            android:layout_centerHorizontal="true"
            android:textColor="@color/c333"
            android:text="@string/settings"
            android:textSize="18sp" />

    </RelativeLayout>
    
    <View style="@style/view_line_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/sip_account"
        android:textColor="@color/cblue"
        android:textSize="14sp" />

    <View style="@style/view_line_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/account"
            android:textColor="@color/c333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/c333"
            android:textSize="16sp" />
    </LinearLayout>

    <View style="@style/view_line_info" />
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/cgray"
        />
    
    <View style="@style/view_line_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/select"
        android:textColor="@color/cblue"
        android:textSize="14sp" />

    <View style="@style/view_line_margin" />

    <LinearLayout
        android:id="@+id/ll_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/audio"
            android:textColor="@color/c333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/c333"
            android:text="@string/opus"
            android:textSize="16sp" />
    </LinearLayout>
    
    <View style="@style/view_line_margin" />

    <LinearLayout
        android:id="@+id/ll_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/video"
            android:textColor="@color/c333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/c333"
            android:text="@string/h264"
            android:textSize="16sp" />
    </LinearLayout>
    
    <View style="@style/view_line_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/version"
            android:textColor="@color/c333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/c333"
            android:textSize="16sp" />
    </LinearLayout>

    <View style="@style/view_line_info" />

</LinearLayout>