<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/img_return"
            style="@style/ww"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_name"
            android:paddingLeft="10dp"
            android:paddingRight="50dp"
            android:paddingTop="2.5dp"
            android:paddingBottom="2.5dp"
            android:src="@drawable/icon_top_back" />

        <TextView
            android:id="@+id/tv_top_middle_title"
            style="@style/ww"
            android:layout_alignBottom="@+id/img_return"
            android:layout_centerHorizontal="true"
            android:textColor="@color/c333"
            android:text="@string/forget"
            android:textSize="18sp" />

    </RelativeLayout>
    
    <TextView 
        android:id="@+id/txt_sendmobile"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/cgray"
        android:text="@string/verify_phone"
        android:gravity="bottom"
        android:textColor="@color/c666"
        android:paddingBottom="2dp"
        android:paddingLeft="10dp"
        />
    
    <View style="@style/view_line_info" />
    
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="15dp" >

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="80dp"
	            android:layout_height="match_parent"
	            android:textSize="18sp"
	            android:gravity="center_vertical"
	            android:textColor="@color/cblue"
                android:text="@string/verify_code" />
            
            <TextView
                android:id="@+id/tv_getcheck"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/send_verify_code"
                android:textColor="@color/c666"
                android:textSize="12sp" />
            

            <EditText
                android:id="@+id/edit_yanzhengma"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_code"
                android:layout_toLeftOf="@id/tv_getcheck"
                android:background="@null"
                android:inputType="number"
                android:hint="@string/input_verify_code"
                android:textColor="@color/c333"
                android:textSize="14sp" />

            
        </RelativeLayout>
    
    <TextView style="@style/view_line_info" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_bule_selector"
        android:text="@string/next_password"
        android:textColor="@color/white"
        android:padding="0dp"
        android:textSize="18sp" />

</LinearLayout>