<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/img_return"
            style="@style/ww"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_name"
            android:paddingLeft="10dp"
            android:paddingRight="50dp"
            android:paddingTop="2.5dp"
            android:paddingBottom="2.5dp"
            android:src="@drawable/icon_top_back" />

        <TextView
            android:id="@+id/tv_top_middle_title"
            style="@style/ww"
            android:layout_alignBottom="@+id/img_return"
            android:layout_centerHorizontal="true"
            android:textColor="@color/c333"
            android:text="@string/forget"
            android:textSize="18sp" />

    </RelativeLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/cgray"
        />
    
    <View style="@style/view_line_info" />
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textColor="@color/cblue"
            android:text="@string/user_password" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/c333"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:hint="@string/hint_user_password" />
    </LinearLayout>
    
    <TextView style="@style/view_line_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textColor="@color/cblue"
            android:text="@string/user_password_ok" />

        <EditText
            android:id="@+id/edit_password_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/c333"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:hint="@string/hint_user_password_ok" />
    </LinearLayout>

    <TextView style="@style/view_line_info" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_bule_selector"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:padding="0dp"
        android:textSize="18sp" />

</LinearLayout>