<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/cgray"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/img_return"
            style="@style/ww"
            android:layout_alignParentLeft="true"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="2.5dp"
            android:text="@string/cancel"
            android:textColor="@color/c666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_top_middle_title"
            style="@style/ww"
            android:layout_alignBottom="@+id/img_return"
            android:layout_centerHorizontal="true"
            android:text="@string/add_contact"
            android:textColor="@color/c333"
            android:textSize="18sp" />

        <TextView
            style="@style/ww"
            android:id="@+id/tv_finish"
            android:layout_alignParentRight="true"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="2.5dp"
            android:text="@string/complete"
            android:textColor="@color/cblue"
            android:textSize="14sp" />
    </RelativeLayout>

    <View style="@style/view_line_info" />

    <View
        style="@style/view_line_info"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="9dp"
            android:background="@drawable/icon_tongxunlu"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_mobile_contact"
            android:textColor="@color/c333"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="12dp"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/icon_list_more"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <View style="@style/view_line_info"
        android:visibility="gone"/>

    <View
        style="@style/view_line_info"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="9dp"
            android:background="@drawable/icon_shou"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_mobile_contact"
            android:textColor="@color/c333"
            android:textSize="15sp" />
    </LinearLayout>

    <View style="@style/view_line_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/photo_1"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="bottom"
                    android:text="@string/name_"
                    android:textColor="@color/c333"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/please_enter_name"
                    android:paddingBottom="10dp"
                    android:textColor="@color/c333"
                    android:textColorHint="@color/c999"
                    android:textSize="14sp" />
            </LinearLayout>

            <View style="@style/view_line_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="bottom"
                    android:text="@string/phone_"
                    android:textColor="@color/c333"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/please_enter_phone_number"
                    android:paddingBottom="10dp"
                    android:textColor="@color/c333"
                    android:textColorHint="@color/c999"
                    android:textSize="14sp" />
            </LinearLayout>

            <View style="@style/view_line_info" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

</LinearLayout>