<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/cgray"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/img_return"
            style="@style/ww"
            android:layout_alignParentLeft="true"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="2.5dp"
            android:text="@string/cancel"
            android:textColor="@color/c666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_top_middle_title"
            style="@style/ww"
            android:layout_alignBottom="@+id/img_return"
            android:layout_centerHorizontal="true"
            android:text="@string/modify_info"
            android:textColor="@color/c333"
            android:textSize="18sp" />

        <TextView
            style="@style/ww"
            android:layout_alignParentRight="true"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="2.5dp"
            android:text="@string/complete"
            android:textColor="@color/cblue"
            android:textSize="14sp" />
    </RelativeLayout>

    <View style="@style/view_line_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/bg_shurukuang"
        android:padding="0dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/icon_nicheng"
            android:contentDescription="@null" />

        <EditText
            android:id="@+id/tv_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/c333"
            android:hint="@string/hint_user_nickname"
            android:background="@null"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/icon_del"
            android:contentDescription="@null" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/bg_shurukuang"
        android:padding="0dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/icon_phone"
            android:contentDescription="@null" />

        <EditText
            android:id="@+id/tv_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/c333"
            android:background="@null"
            android:hint="@string/hint_user_name"
            android:inputType="phone"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/icon_del"
            android:contentDescription="@null" />
    </LinearLayout>


</LinearLayout>